style/style.css
@font-face {
 font-family: "Interstate light";
 font-weight: light;
 src: local("Interstate-Light"), url(../fonts/Interstate-Light.ttf) format("truetype");
}

body, html {
  padding: 0;
  margin: 0;
  font-size: 12px;
  line-height: 1.3em;
  font-family: "Lucida Grande", Verdana, Arial;
  color: #333;
  -moz-user-select : none;
  -khtml-user-select : none;
}

h1, h2 {
  font-weight: normal;
  margin: 0 0 0em 0;
  line-height: 1.3em;
  font-family: "Interstate light", interstate-light, "Lucida Grande", Helvetica, Arial, sans-serif;
}  

h1 {
  font-size: 21px;
}

h2 {
  font-size: 21px;
  color: #666;
  margin-bottom: 15px;
}

h3 {
  margin: 0;
  line-height: 1.3em;
  font-weight: normal;
  
}

a {
  color: #f06;
  text-decoration: none;
}

a:hover {
  color: #f06;
  text-decoration: none;
}

#map_canvas {
  height: 100%;
}

#bubble-template{
  display:none;
}     

#about-box, .share-box {
  position: absolute;
  left: 50%;
  top: 40%;
  margin-left: -242px;
  margin-top: -150px;
  width: 450px;
  background: white;
  line-height: 1.4em;
  border: 5px solid rgb(213,213,213);
  -webkit-box-shadow : 3px 3px 5px rgba(0,0,0,0.3);
  -moz-box-shadow : 3px 3px 5px rgba(0,0,0,0.3);
  -moz-border-radius: 5px;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  padding: 20px;
  display: none;
  z-index: 20;
} 

#about-box #built-by {
  color: #666;
}

#about-box #built-by a {
  color: #333;
}

#about-box #built-by a:hover {
  color: #f06;
}

#about-box #built-by p {
  margin: 7px 0 0 0;
}

#about-box h3 {
  margin: 0 -5px 20px 0px;
  padding: 10px 10px 10px 133px;
  color: #eee;
  font-size: 13px;
  line-height: 1.4em;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-border-radius: 3px; 
  background: #696969 url('../images/world_white.png') 7px 12px no-repeat;
}

#about-box h3 a {
  color: #fff;
  background: #f06;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-border-radius: 3px; 
  padding: 1px 3px;
}


.share-box {
  width: 400px;
  margin-left: -230px;
  margin-top: -100px;
}
  .share-box h1 {
    margin: -10px 0 15px 0;
    padding: 0;
  }

  .share-box input {
    width: 100%;
    font-size: 16px;
  }

#about-box a.close, .share-box a.close {
  text-decoration: none;
  float: right;
  margin-right: -5px;
  margin-top: -5px;
  text-decoration: none;
	font-size: 20px;
/*  text-indent: -9999px;*/
  width: 11px;
  height: 11px;
  display: block;
/*  background: transparent url(/images/icons.png) no-repeat -289px -6px;*/
  outline: 0;
}

.bubble {
  clear: both;
  width: 350px;
}

.bubble .artwork {
  width: 100px;
  height: 100px;
  float: left;
  margin-right: 10px;
  background: #f06;
}

.bubble .artwork img {
  position: absolute;
  z-index: 10000;
}

.bubble .artwork .play-button {
  position: absolute;
  z-index: 100000;
  width: 100px;
  height: 100px;
  display: block;
  text-indent: -9999px;
  outline: 0;
}


.bubble .play-button.smaller {
  display: block;
  font-size: 18px;
  margin: 10px 0 0 110px;
  padding: 2px 5px 5px 5px;
  outline: 0;
  background: #f06;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  width: 120px;
  text-align: center;
  color: #fff;
  font-family: "Interstate light", interstate-light, "Lucida Grande", Helvetica, Arial, sans-serif;
}

.bubble .title {
  display: block;
  color: #333;
  margin-bottom: 4px;
}

.bubble .city {
  border-bottom: 1px solid #efefef;
  margin: -5px 0 5px 0;
  padding: 0 0 3px 0;
  width: 345px;
}

.bubble .actions {
  right: 12px;
  top: -6px;
}
  
.bubble .city .city-name {
  font-weight: bold;
}

.bubble .info {
  border-bottom: 1px solid #efefef;
  margin: 0 0 5px 0;
  padding: 0 0 0px 0;
}

.bubble .info ul li {
  margin-bottom: 5px;
}

.bubble .info ul li span.artist {
  font-weight: bold;
}

.bubble .avatar {
  float: left;
  height: 100px;
  width: 100px;
  margin: 0 10px 0 0;
  
}

.bubble ul {
  list-style-type:none;
  clear: left;
  margin: 0;
  padding: 0;
}

.bubble ul li {
  float: left;
}

.bubble ul li.previous, .bubble ul li.next {
  text-indent: -9999px;
  background: white;
  width: 0px;
  margin: 0;
  }

.bubble ul li.current {
  width: 350px;
  margin-right: 0;
  color: #999;
}

.bubble ul li.current a {
  color: #999;
}

.bubble ul.track-list li.next, .bubble ul.tracks-list li.next {
  margin-right: 0;
}

.bubble ul.track-list li {
}

.bubble ul.tracks-list {
  padding-top: 10px;
  margin-left: -2px;
  height: 38px;
  overflow: hidden;
}
  
.bubble ul.tracks-list li {
  height: 36px;
  width: 39px;
}

.bubble ul.tracks-list li.mini-artwork a {
  display: block;
  width: 32px;
  height: 32px;
  margin-right: 0px;
  text-indent: -9999px;
  outline: 0;
  background: #ff99c2;
  border: 2px solid #fff;
}

.bubble ul.tracks-list li.mini-artwork a.active {
  border: 2px solid #f06;
}

.bubble h5 {
  margin:5px 0;
  padding:0;
  font-size:13px;
  font-weight:normal; 
}

.bubble .lng, .bubble .lat, .bubble .waveform {
  display:none;
}

.options {
  position: absolute;
  bottom: 0;
  height: 80px;
  width: 100%;
  background: #efefef;
  font-family: "Interstate light", interstate-light, "Lucida Grande", Helvetica, Arial, sans-serif;
  font-size: 18px;
  line-height: 1.7em;
}

.options .genres {
  height: 35px;
  color: #999;
  padding: 5px 10px 0 10px;
  background: #696969 url('../images/bg.png') top left repeat-x;
  font-family: "Interstate light", interstate-light, "Lucida Grande", Helvetica, Arial, sans-serif;
}

.options .genres a {
  color: #d6d6d6;
  padding: 0 3px;
  outline: 0;
}

.options .genres a.active {
  color: #fff;
  background: #f06;
  -moz-border-radius: 3px;
  border-radius: 3px;
  -webkit-border-radius: 3px;
}

.toam a{ 
  position: absolute;
  left: 10px;
  top: 6px;
  color: #333;
  padding-left: 75px;
  background: transparent url('../images/world.png')  top left no-repeat;
}

.options .jump-to {
  position: relative;
  height: 35px;
  padding: 5px 10px 0 10px;
  background: #d6d6d6 url('../images/bg.png') 0 -51px repeat-x;
  font-family: "Interstate light", interstate-light, "Lucida Grande", Helvetica, Arial, sans-serif;
}

.options .jump-to a.powered-by {
  position: absolute;
  right: 10px;
  top: 6px;
  color: #999;
  padding-right: 55px;
  background: transparent url('../images/small-cloud.png')  100% 48% no-repeat;
}

.waveform .loading {
	background: #d6d6d6 url('../images/bg.png') 0 -51px repeat-x;
}

.waveform .spinner {
	background: transparent url('/images/ajax-loader.gif') 0 0 repeat-x;
  width: 32px;
  height: 32px;
  position: absolute;
  margin-left: 16px;
  left: 50%;
  top: 10px;
}

